--- a/style.css
+++ b/style.css
@@ -1,106 +1,17 @@
 * {
     padding:0;
     margin:0;
-    vertical-align:baseline;
     list-style:none;
     border:0
-    }
-
-:root{
-    --gunmetal: #293132ff;
-    --cambridge-blue: #73ab84ff;
-    --atomic-tangerine: #e88d67ff;
-    --pale-azure: #6cd4ffff;
-    --jordy-blue: #83bcffff;
 }
-header{
-    margin: 0 auto;
-    padding: 1rem;
-    text-transform: uppercase;
-    padding:0;
-    font-family:Arial, Helvetica, sans-serif;
+.nav-color{
+    background-color: #1B5299 ;
+    height: 50px;
+    margin-top: -10px;
 }
-.cabecalho{
-    background-color: var(--cambridge-blue);
-    padding: 0.5rem 0.5rem ;
-    width: 100vw;
+.navbar{
+    margin-top: 0px;
 }
-.cabecalho h1{
-    color: var(--gunmetal);
-    text-decoration-line: underline;
-    font-weight: 800;
-    width: fit-content;
-    display: inline-block;
-}
-.cabecalho h2{
-    color: var(--gunmetal);
-    font-size: 12pt;
-    font-weight: 800;
-    width: fit-content;
-    display: block;
-
-}
-.cabecalho figcaption{
-    position: absolute;
-    top: 160px;
-    left: 16px;
-    padding: 0.5rem;
-    font-weight: 800;}
-menu{
-    margin: 0 auto;
-    background-color: var(--jordy-blue);
-    border: 0.1rem black solid;
-}
-.menu1{
-    display: inline-flex;
-    flex-direction: row;
-    margin: 0 auto;
-}   
-.menu1 a{
-    color: var(--gunmetal);
-    margin: 0 auto;
-    text-decoration: none;
-    align-content: space-between;
-    padding: 0.3rem;
-    font-weight: 800;
-}
-.murais{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    margin: 20px;
-}
-.mural1{
-    height: 200px;
-    width: 400px;
-    margin: 0 auto;
-    text-align: justify;
-    border: 2px solid black;
-    position: relative;
-    left: 500px;
-    top: 96.5px;
-    padding: 10px;
-
-}
-.mural1 h2{
-    width: fit-content;
-    text-transform: uppercase;
-    margin: 0 auto;
-    padding: 5px;
-}
-.mural2{
-    width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    border: 2px solid black;
-    position: relative;
-    left: 500px;
-    top: 300px;
-    padding: 10px;
-
-}
-.mural2 h2{
-    width: fit-content;
-    text-transform: uppercase;
-    margin: 0 auto;
-    padding: 5px;
+.drop-color{
+        background-color: #1B5299 ;
 }
